force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/StellaConnect__Stella_Connect_Response__c.object-meta.xml
<CustomObject>
    <description>Responses from Stella Connect Request</description>
    <label>Stella Connect Response</label>
    <nameField>
        <displayFormat>SCR-{000000}</displayFormat>
        <label>Stella Connect Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stella Connect Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>