force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Additional_Question__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Additional_Question__c</fullName>
    <label>Additional Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>