force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Additional_Question_Response_MC__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Additional_Question_Response_MC__c</fullName>
    <label>Additional Question Response (MC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>