force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Additional_Question_Response_Scale__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Additional_Question_Response_Scale__c</fullName>
    <label>Additional Question Response (Scale)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>