force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Areas_of_Excellence__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Areas_of_Excellence__c</fullName>
    <label>Areas of Excellence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>