force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Comments__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>