force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Request_ID__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Request_ID__c</fullName>
    <formula>StellaConnect__Stella_Connect_Request__r.StellaConnect__Request_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request ID</label>
    <type>Text</type>
</CustomField>