force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Response_Received_At__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Response_Received_At__c</fullName>
    <label>Response Received At</label>
    <type>DateTime</type>
</CustomField>