force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Reward__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Reward__c</fullName>
    <label>Reward</label>
    <length>100</length>
    <type>Text</type>
</CustomField>