force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Star_Rating__c</fullName>
    <label>Star Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>