force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/fields/StellaConnect__Stella_Connect_Request__c.field-meta.xml
<CustomField>
    <fullName>StellaConnect__Stella_Connect_Request__c</fullName>
    <label>Stella Connect Request</label>
    <referenceTo>StellaConnect__Stella_Connect_Request__c</referenceTo>
    <relationshipLabel>Stella Connect Responses</relationshipLabel>
    <relationshipName>Stella_Connect_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>