force-app/main/default/objects/StellaConnect__Stella_Connect_Response__c/listViews/StellaConnect__All.listView-meta.xml
<ListView>
    <fullName>StellaConnect__All</fullName>
    <columns>NAME</columns>
    <columns>StellaConnect__Request_ID__c</columns>
    <columns>StellaConnect__Star_Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StellaConnect__Stella_Connect_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>